# Metody_numeryczne

./: .gitignore  CMakeLists.txt  README.md
examples/: example_approximation.cpp  example_interpolation.cpp  example_system_solver.cpp
include/: approximation.h  interpolation.h  linear_solver.h
